tests/ui/proc-macro/ambiguous-builtin-attrs-test.stderr
error[E0425]: cannot find value `NonExistent` in this scope
  --> $DIR/ambiguous-builtin-attrs-test.rs:20:5
   |
LL |     NonExistent;
   |     ^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
